// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReactionButton /> snapshot should match snapshot 1`] = `
<ReactionButton>
  <ButtonCircle
    className="md-reaction-button-wrapper"
    data-reacted={false}
    size={32}
    variant="tertiary"
  >
    <Button
      className="md-button-circle-wrapper md-reaction-button-wrapper"
      color="default"
      data-reacted={false}
      size={32}
      variant="tertiary"
    >
      <mdc-button
        class="md-button-circle-wrapper md-reaction-button-wrapper"
        data-reacted={false}
        suppressHydrationWarning={true}
      >
        <Reaction
          name="haha"
        >
          <div
            className="md-reaction-wrapper md-icon-scales"
            data-name="haha"
            data-scale={12}
          />
        </Reaction>
      </mdc-button>
    </Button>
  </ButtonCircle>
</ReactionButton>
`;

exports[`<ReactionButton /> snapshot should match snapshot with className 1`] = `
<ReactionButton
  className="example-class"
>
  <ButtonCircle
    className="example-class md-reaction-button-wrapper"
    data-reacted={false}
    size={32}
    variant="tertiary"
  >
    <Button
      className="md-button-circle-wrapper example-class md-reaction-button-wrapper"
      color="default"
      data-reacted={false}
      size={32}
      variant="tertiary"
    >
      <mdc-button
        class="md-button-circle-wrapper example-class md-reaction-button-wrapper"
        data-reacted={false}
        suppressHydrationWarning={true}
      >
        <Reaction
          name="haha"
        >
          <div
            className="md-reaction-wrapper md-icon-scales"
            data-name="haha"
            data-scale={12}
          />
        </Reaction>
      </mdc-button>
    </Button>
  </ButtonCircle>
</ReactionButton>
`;

exports[`<ReactionButton /> snapshot should match snapshot with id 1`] = `
<ReactionButton
  id="example-id"
>
  <ButtonCircle
    className="md-reaction-button-wrapper"
    data-reacted={false}
    id="example-id"
    size={32}
    variant="tertiary"
  >
    <Button
      className="md-button-circle-wrapper md-reaction-button-wrapper"
      color="default"
      data-reacted={false}
      id="example-id"
      size={32}
      variant="tertiary"
    >
      <mdc-button
        class="md-button-circle-wrapper md-reaction-button-wrapper"
        data-reacted={false}
        suppressHydrationWarning={true}
      >
        <Reaction
          name="haha"
        >
          <div
            className="md-reaction-wrapper md-icon-scales"
            data-name="haha"
            data-scale={12}
          />
        </Reaction>
      </mdc-button>
    </Button>
  </ButtonCircle>
</ReactionButton>
`;

exports[`<ReactionButton /> snapshot should match snapshot with reacted 1`] = `
<ReactionButton
  reacted={true}
>
  <ButtonCircle
    className="md-reaction-button-wrapper"
    data-reacted={true}
    size={32}
    variant="tertiary"
  >
    <Button
      className="md-button-circle-wrapper md-reaction-button-wrapper"
      color="default"
      data-reacted={true}
      size={32}
      variant="tertiary"
    >
      <mdc-button
        class="md-button-circle-wrapper md-reaction-button-wrapper"
        data-reacted={true}
        suppressHydrationWarning={true}
      >
        <Reaction
          name="haha"
        >
          <div
            className="md-reaction-wrapper md-icon-scales"
            data-name="haha"
            data-scale={12}
          />
        </Reaction>
      </mdc-button>
    </Button>
  </ButtonCircle>
</ReactionButton>
`;

exports[`<ReactionButton /> snapshot should match snapshot with style 1`] = `
<ReactionButton
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonCircle
    className="md-reaction-button-wrapper"
    data-reacted={false}
    size={32}
    style={
      Object {
        "color": "pink",
      }
    }
    variant="tertiary"
  >
    <Button
      className="md-button-circle-wrapper md-reaction-button-wrapper"
      color="default"
      data-reacted={false}
      size={32}
      style={
        Object {
          "color": "pink",
        }
      }
      variant="tertiary"
    >
      <mdc-button
        class="md-button-circle-wrapper md-reaction-button-wrapper"
        data-reacted={false}
        style={
          Object {
            "color": "pink",
          }
        }
        suppressHydrationWarning={true}
      >
        <Reaction
          name="haha"
        >
          <div
            className="md-reaction-wrapper md-icon-scales"
            data-name="haha"
            data-scale={12}
          />
        </Reaction>
      </mdc-button>
    </Button>
  </ButtonCircle>
</ReactionButton>
`;
